--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
               <div class="baby_detail">
                 <div class="baby_text">
                   <h3>
-                    ayo berbicara menggunakan blackbox.ai!!
+                    ayo berbicara menggunakan Elaina di blackbox.ai!!
                   </h3>
               </div>
               <div class="care_detail">
-                <a href="">
-                 klik ini untuk chat AI
+                <a href="https://www.blackbox.ai/agent/Elaina_gkNJp8F">
+                 klik ini untuk chat Elaina
                 </a>
                   <h3>
                     coba sekarang karena itu gratis! anda bisa mengobrol dan create image anda dengan prompt yang kamu buat. anda bisa belajar dengan ai. membantu tugas seperti coding dan lain lain
