--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <div class="overlay-content">
               <a class="active" href="index.html"> Home <span class="sr-only">(current)</span></a>
               <a class="" href="about.html"> About</a>
+              <a class="" href="https://www.blackbox.ai/agent/Elaina_gkNJp8F"> Elaina char</a>
               <a class="" href="why.html"> why </a>
               <a class="" href="testimonial.html"> Testimonial</a>
             </div>
